add data and create email from data.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
                     <td>Oct 31</td>
                 </tr>
                 <tr>
-                    <td>Turkey</td>
-                    <td>Ahh!  Don't Eat Me!</td>
-                    <td>Nov 1</td>
+                    <!-- can pull data from the ng-init to form an email -->
+                    <td>{{ email.from }}</td>
+                    <td>{{ email.subject }}</td>
+                    <td>{{ email.date }}</td>
                 </tr>
                 <tr>
                     <td>Donald Trump</td>
