--- a/index.html
+++ b/index.html
@@ -42,7 +42,30 @@
                     <td>{{ email.subject }}</td>
                     <td>{{ email.date }}</td>
                 </tr>
-                <div class='mod'
+                <div class='modal'>
+                    <div class='modal-header'>
+                        <button type='button' class='close'>x</button>
+                        <h3>Subject</h3>
+                    </div>
+                    <div class='modal-body'>
+                        From: Steve
+                        <br />
+                        Date: Jan 2
+                        <br />
+                        <br />
+
+                        <p>
+                            Hey you! <br />
+                            <br />
+                            How are you doing?<br />
+                            <br />
+                            Sincerely,
+                            <br />
+                              Your friend
+                          </p>
+                      </div>
+                      <div class='modal-footer'>
+                          <a href='#' class='btn btn'
             </table>
         </div>
     </body>
