add small tweaks.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </p>
 
                         <p>
-                            {{ selectedEmail.body }}
+                            <span style='white-space:pre'>{{ selectedEmail.body }}</span>
                         </p>
                     </div>
 
